--- a/views/pages/templates/header.ejs
+++ b/views/pages/templates/header.ejs
@@ -82,10 +82,11 @@ a:not([href]):not([tabindex]){
 </div>
 <div id="fb-root"></div>
 <script>
+    // Ryanbqq
 
-//facebook API not yet working
-//process.env(facebookID);
-/*
+
+process.env(facebookID);
+
      window.fbAsyncInit = function() {
       FB.init({
         appId      : '168050303776214',
@@ -117,7 +118,7 @@ a:not([href]):not([tabindex]){
             href: 'https://pacemaker438.herokuapp.com/',
           }, function(response){});
         }
-  */
+  
 </script>
 <title>Recipe Vision</title>
 <div class="container">
