--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -67,7 +67,7 @@ h1,h2,h3,h4,h5,h6 {
     <div class="w3-col l6 w3-padding-large">
       <h1 class="w3-center">How It Works</h1>
       
-      <p>We are able to make our project work through quite a few approaches and technologies. The main ones we used are Cloud9, Git, Heroku, Facebook API, Edamam API, & Cloud Vision API.</p>
+      <p>We are able to make our project work through quite a few approaches and technologies. The framework we used was Node.js & Express. The IDE we used was Cloud9. The main API's we used are Edamam API, & Google Vision API. Finally, we deployed the website on Heroku.</p>
      </br>
       <h4>Heroku</h4>
       <p class="w3-text-grey">We are using Heroku in order to host our application.</p>
@@ -78,7 +78,7 @@ h1,h2,h3,h4,h5,h6 {
       <h4>Youtube API</h4>
       <p class="w3-text-grey">Allows us to pull recipe videos relevent to the searches</p>
 
-      <h4>Cloud Vision API</h4>
+      <h4>Google Vision API</h4>
       <p class="w3-text-grey">Through this API, it grabs the contents of an image, which allows for the recipe search.</p><br>
     
       <h4 href="/home"><b>Try it Out!</b></h4>
