--- a/views/pages/recipebook.ejs
+++ b/views/pages/recipebook.ejs
@@ -50,7 +50,7 @@
    </div>
    <div class="content">
   <h2>Saved Recipes</h2>
-  <p>This section will contain user info and recipes that were saved</p>
+  <p>This section will contain user info and recipes that were saved, this is still currently under construction and will be available shortly.</p>
 </div>
     <!-- Inclue footer template -->
     <% include templates/footer.ejs %>
