--- a/views/pages/templates/header.ejs
+++ b/views/pages/templates/header.ejs
@@ -1,4 +1,7 @@
      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
 <style>
     #divOne{
@@ -76,6 +79,7 @@ a:not([href]):not([tabindex]){
   color:black;
 
 }
+
 </style>
 
 <div class="jumbotron text-center" id="jumbo">
@@ -93,34 +97,80 @@ a:not([href]):not([tabindex]){
       </button>
       <a class="navbar-brand" id="title"><%= title %></a>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <div id="navigationBar">
         <ul class="navbar-nav">
+          <!-- Accent-colored raised button with ripple -->
+
+
           <li class="nav-item active">
-            <a class="nav-link" href="/home">Home 
-              <span class="sr-only"></span>
-            </a>
+             <button id="homeButton" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+          Home
+          </button>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/features">Manual Search</a>
+          <button id="manualButton" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+          Manual Search
+          </button>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/vision">Image Search</a>
+          <button id="imageButton" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+          Image Search
+          </button>
           </li>                
 
           <li class="nav-item">
-            <a class="nav-link" href="/recipebook">Recipe Book</a>
+             <button id="recipeBook" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+          Recipe Book
+          </button>
           </li> 
        
-        </ul>
+        </ul></div>
         
           <ul class="nav navbar-nav navbar-right">
-            <li id="loginLink"><a class= "nav-link" href="#" data-toggle='modal' data-target='#myModal'>Log In</a></li>
-            <li id="signupLink"><a class= "nav-link" href="/userRegister">Sign Up</a></li>
+            <li id="loginLink"><button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" href="#" data-toggle='modal' data-target='#myModal'>Log In</button></li>
+            <li id="signupLink"><button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"  id="signBtn">Sign Up</button></li>
             <li id="accSettings" class="hidden"><a id="accLink"> Account Settings</a></li>
-            <li id="logoutLink" class="hidden"><a class= "nav-link" onclick="logout()" >Log Out</a></li>
+            <li id="logoutLink" class="hidden"><button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"  id="logoutBtn" onclick="logout()">Log Out</a></li>
           </ul>
       </div>
     </nav>
     
+    <style>
+      #manualButton{
+        margin-right:1em;
+      }
+       #homeButton{
+        margin-right:1em;
+      }
+       #imageButton{
+        margin-right:1em;
+      }
+      #recipeBook{
+        margin-right:1em;
+      }
+      #signBtn{
+        margin-left:1em;
+      }
+    </style>
+    
+    <script type="text/javascript">
+    document.getElementById("manualButton").onclick = function () {
+        location.href = "/features";
+    };
+     document.getElementById("homeButton").onclick = function () {
+        location.href = "/home";
+    };
+      document.getElementById("imageButton").onclick = function () {
+        location.href = "/vision";
+    };
+     document.getElementById("recipeBook").onclick = function () {
+        location.href = "/recipebook";
+    };
+    document.getElementById("signBtn").onclick = function(){
+      location.href = "/userRegister";
+    };
+
+  </script>
     <!--  <input id="test">  
 <button onclick="testFunction()">Test Button</button>
 -->
@@ -148,7 +198,7 @@ a:not([href]):not([tabindex]){
             <div class="modal-body">
                   <input type="text" id="username" name="username" placeholder="Username"><br>
                   <input type="password" id="password" name="password"  placeholder="Password"><br>
-                  <button onclick="setLoginCookies()" name="loginForm">Login</button>
+                  <button onclick="setLoginCookies()" name="loginForm" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">Login</button>
             </div>
           </div>
         </div>
