--- a/views/pages/templates/header.ejs
+++ b/views/pages/templates/header.ejs
@@ -198,7 +198,7 @@ a:not([href]):not([tabindex]){
             <div class="modal-body">
                   <input type="text" id="username" name="username" placeholder="Username"><br>
                   <input type="password" id="password" name="password"  placeholder="Password"><br>
-                  <button onclick="setLoginCookies(setHeaders())" name="loginForm" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">Login</button>
+                  <button onclick="setLoginCookies()" name="loginForm" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">Login</button>
             </div>
           </div>
         </div>
@@ -214,13 +214,13 @@ a:not([href]):not([tabindex]){
     <script>
    
       function getCookie(name) {
-        console.log(document.cookie.indexOf(name));
+        console.log("Cookie index: " + document.cookie.indexOf(name));
         var value = "; " + document.cookie;
         var parts = value.split("; " + name + "=");
         if (parts.length == 2) return parts.pop().split(";").shift();
       }
       
-      function setLoginCookies(callback) {
+      function setLoginCookies() {
         var username = $("#username").val();
         var password = $("#password").val();
         if(password == "" || username ==""){
@@ -233,6 +233,7 @@ a:not([href]):not([tabindex]){
          // console.log("Sending Login credentials");
         });
         
+        setHeaders();
       }
       
       function logout() {
