--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -26,7 +26,7 @@ h1,h2,h3,h4,h5,h6 {
       <a href="#about" class="w3-bar-item w3-button">About</a>
       <a href="#works" class="w3-bar-item w3-button">How It Works</a>
       <a href="#github" class="w3-bar-item w3-button">GitHub</a>
-     <a href="/home" class="w3-bar-item w3-button">Try It</a>
+     <a href="/features" class="w3-bar-item w3-button">Try It</a>
     </div>
   </div>
 </div>
@@ -85,7 +85,7 @@ h1,h2,h3,h4,h5,h6 {
       <h4>Google Vision API</h4>
       <p class="w3-text-grey">Through this API, it grabs the contents of an image, which allows for the recipe search.</p><br>
     
-      <h4 href="/home"><b>Try it Out!</b></h4>
+      <h4 href="/features"><b>Try it Out!</b></h4>
     </div>
     
     <div class="w3-col l6 w3-padding-large">
