--- a/views/pages/vision.ejs
+++ b/views/pages/vision.ejs
@@ -12,10 +12,10 @@
     <% include templates/header.ejs %>
     <script>
  // check if user is logged in or not   
- console.log(getCookie("username"));
-    if(!getCookie("username")) {
-        window.location.replace("/userRegister");
-    }
+//  console.log(getCookie("username"));
+//     if(!getCookie("username")) {
+//         window.location.replace("/userRegister");
+//     }
     
   </script>
     
